--- a/sass/04-components/_menu-btn.scss
+++ b/sass/04-components/_menu-btn.scss
@@ -6,7 +6,7 @@
     display: none;
   }
   &__button {
-    background-color: $green-main;
+    background-color: rgba($green-main, .6);
     height: 6rem;
     width: 7rem;
     position: fixed;
@@ -14,7 +14,7 @@
     right: 0;
     z-index: 190;
     text-align: center;
-    transition: all 1.5s;
+    transition: all 1.2s;
 
     @include respond(desktop) {
       display: none;
