mobile menu more include files

--- a/templates/navigation/nav--mobile.html.twig
+++ b/templates/navigation/nav--mobile.html.twig
@@ -2,10 +2,12 @@
 /**
  * include for navigation.html.twig
  * navigation mobile
- * _nav-mobile.scss
+ * regions/_nav-mobile.scss
  * 
 */
  #}
+
+<div class="navigation__background"></div>
 
 <nav class="navigation__nav">
   <div class="navigation__wrap">
