--- a/sass/03-regions/_nav-mobile.scss
+++ b/sass/03-regions/_nav-mobile.scss
@@ -4,18 +4,6 @@
 
 .navigation {
 
-  &__background {
-    height: 1rem;
-    width: 1rem;
-    position: fixed;
-    top: 0;
-    right: -5rem;
-    background: $black_gunmetal;
-    z-index: 170;
-    transition: transform 0.8s;
-
-  }
-
   &__top {
     height: 50vh;
     position: fixed;
@@ -26,16 +14,26 @@
     width: 0;
     background: $black_gunmetal--lighter;
     transition: all 0.8s;
+
     display: flex;
     align-items: center;
     justify-content: center;
-  }
 
+    @include respond(tablet) {
+      height: 100vh;
+      left:  -100%;
+    }
+  }
 
   &__checkbox:checked ~ &__top {
     opacity: 1;
-    width: 100%;
+    width: 100vw;
     right: 0;
+
+    @include respond(tablet) {
+      width: 50vw;
+      left: 0;
+    }
   }  
 
   &__items {
@@ -87,13 +85,13 @@
 
   &__bottom {
     margin: 0 auto;
-    height: 50vh;
     position: fixed;
+    height: 50vh;    
     top: 50%;
     left: -100%;
-    z-index: 175;
-    opacity: 0;
     width: 0;
+    z-index: 175;
+    opacity: 0;    
     background: $black_gunmetal;
     transition: all .8s;    
 
@@ -108,6 +106,7 @@
     align-items: center;
     justify-items: center;
 
+
     @include respond(tablet) {
       grid-template-columns: 50vw;
       grid-template-rows: repeat(4, auto);
@@ -118,13 +117,24 @@
         "site-name"
         "site-slogan"
         "footer";
+      
+      top: 0;
+      left: 0;
+      right:  -100%;
+      height: 100vh;
     }
   }
 
   &__checkbox:checked ~ &__bottom {
     opacity: 1;
-    width: 100%;
+    width: 100vw;
+    right: 0;
     left: 0;
+
+    @include respond(tablet) {
+      width: 50vw;
+      right: -50vw;
+    }
   }
 
   &__site-avatar {
@@ -163,7 +173,7 @@
     align-self: center;
 
     @include respond(tablet) {
-      width: 100vw;
+      width: 50vw;
       margin: 0;
     }
 
