--- a/templates/content/node--pups_expected--teaser.html.twig
+++ b/templates/content/node--pups_expected--teaser.html.twig
@@ -3,6 +3,7 @@
  * @file
  * Theme override to display a node.
  *
+ * 03-regions/_pups-expected.scss
  */
 #}
 {%
@@ -10,7 +11,6 @@
     'node',
     'pups-expected',
     'panel-wide',
-    'pups-expected',
     'node--type-' ~ node.bundle|clean_class,
     node.isPromoted() ? 'node--promoted',
     node.isSticky() ? 'node--sticky',
