menu-items to onze-buldog-... and disabled wow on frontpage bug in EDGE

--- a/templates/layout/page--front.html.twig
+++ b/templates/layout/page--front.html.twig
@@ -2,11 +2,14 @@
 /**
  * @file
  * Theme override to display a single page.
- */
+ *
+ * attach_library('bullensteeg/frontjs')
+ * attach_library('bullensteeg/animatestyle')
+ *
+ * wow disabled, order and z-index problems at Microsoft Edge
+ *
+*/
 #}
-
-{{ attach_library('bullensteeg/frontjs') }}
-{{ attach_library('bullensteeg/animatestyle') }}
 
 <header class="header">
 
