--- a/templates/navigation/nav--desktop.html.twig
+++ b/templates/navigation/nav--desktop.html.twig
@@ -13,10 +13,10 @@
         <a href="{{ path('<front>') }}" class="navigation__link--desktop">{{ "Home"|t }}</a>
       </li>
       <li class="navigation__item--desktop">
-        <a href="{{ base_path }}onze-teven" class="navigation__link--desktop">{{ "Teven"|t }}</a>
+        <a href="{{ base_path }}onze-buldog-teven" class="navigation__link--desktop">{{ "Teven"|t }}</a>
       </li>
       <li class="navigation__item--desktop">
-        <a href="{{ base_path }}onze-reuen" class="navigation__link--desktop">{{ "Reuen"|t }}</a>
+        <a href="{{ base_path }}onze-buldog-reuen" class="navigation__link--desktop">{{ "Reuen"|t }}</a>
       </li>
       <li class="navigation__item--desktop">
         <a href="{{ base_path }}onze-pups" class="navigation__link--desktop">{{ "Pups"|t }}</a>
