--- a/templates/partials/front-page/our-pets.html.twig
+++ b/templates/partials/front-page/our-pets.html.twig
@@ -19,7 +19,7 @@
         </span>
         <h2 class="heading heading-second">{{ "Onze Teven"|t }}</h2>
         <div class="read-more u-flex-align-right">
-          <a href="{{base_path}}onze-teven" class="read-more__link">
+          <a href="{{base_path}}onze-buldog-teven" class="read-more__link">
             {{ "Lees meer"|t }}
           </a>
         </div>
@@ -37,7 +37,7 @@
         </span>
         <h2 class="heading heading-second">{{ "Onze Reuen"|t }}</h2>
         <div class="read-more u-flex-align-right">
-          <a href="{{base_path}}onze-reuen" class="read-more__link">
+          <a href="{{base_path}}onze-buldog-reuen" class="read-more__link">
             {{ "Lees meer"|t }}
           </a>
         </div>
