--- a/templates/navigation/nav--mobile.html.twig
+++ b/templates/navigation/nav--mobile.html.twig
@@ -27,10 +27,10 @@
           <a href="{{ base_path }}onze-pups" class="navigation__link">{{ "Onze Pups"|t }}</a>
         </li>
         <li class="navigation__item">
-          <a href="{{ base_path }}onze-teven" class="navigation__link">{{ "Bullensteeg Teven"|t }}</a>
+          <a href="{{ base_path }}onze-buldog-teven" class="navigation__link">{{ "Bullensteeg Teven"|t }}</a>
         </li>
         <li class="navigation__item">
-          <a href="{{ base_path }}onze-reuen" class="navigation__link">{{ "Bullensteeg Reuen"|t }}</a>
+          <a href="{{ base_path }}onze-buldog-reuen" class="navigation__link">{{ "Bullensteeg Reuen"|t }}</a>
         </li>        
       </ul>
     </div>
