adding rel="noopener" to external link

--- a/templates/content/node--contact-info.html.twig
+++ b/templates/content/node--contact-info.html.twig
@@ -30,7 +30,7 @@
   </div>
 
   <div class="sub-footer__social">
-    <a href="{{ content.field_aboutme_fb }}" target="_blank" class="social-link"><i class="fab fa-facebook-square"></i></a>
+    <a href="{{ content.field_aboutme_fb }}" target="_blank" rel="noopener" class="social-link"><i class="fab fa-facebook-square"></i></a>
   </div>
   
 </article>
