--- a/templates/partials/shared/footer.html.twig
+++ b/templates/partials/shared/footer.html.twig
@@ -12,7 +12,7 @@
 
       <div class="sub-footer__btn-contact">
         <div class="sub-footer__email">
-          <script>mail("marleenhalleng","gmail",0,"","")</script>
+          <a class="btn btn--green u-align-center u-full-width" href="{{ 'moc.liamg@gnellahneelram:otliam'|reverse }}" >{{ 'moc.liamg@gnellahneelram'|reverse }}</a>
         </div>
       </div>
 
