--- a/templates/partials/front-page/header-front.html.twig
+++ b/templates/partials/front-page/header-front.html.twig
@@ -10,7 +10,7 @@
   <div class="header__main">  
 
     <div class="header__img">
-        <img src="{{ base_path ~ directory }}dist/images/front-img.jpg" alt="Bullensteeg groepsfoto">
+        <img src="{{ base_path ~ directory }}/dist/images/front-img.jpg" alt="Bullensteeg groepsfoto">
     </div>
 
     <div class="header__title">
