bug images teef and rue our-pets  Changes to be committed: 	new file:   dist/images/reu.JPG 	new file:   dist/images/teef1.JPG 	new file:   images/reu.JPG 	new file:   images/teef1.JPG 	modified:   templates/partials/front-page/our-pets.html.twig

--- a/templates/partials/front-page/our-pets.html.twig
+++ b/templates/partials/front-page/our-pets.html.twig
@@ -10,7 +10,7 @@
     <div class="our-pets__teven panel">
 
       <div class="teven__img wow slideInUp" data-wow-duration="1s">
-        <img src="{{ base_path ~ directory }}/images/for_html/teef1.JPG" alt="">
+        <img src="{{ base_path ~ directory }}/dist/images/teef1.JPG" alt="">
       </div>
                 
       <div class="panel__inner">
@@ -29,7 +29,7 @@
 
     <div class="our-pets__reuen panel">
       <div class="reuen__img wow slideInUp" data-wow-duration="1s">
-        <img src="{{ base_path ~ directory }}/images/for_html/reu.JPG" alt="">
+        <img src="{{ base_path ~ directory }}/dist/images/reu.JPG" alt="">
       </div>
       <div class="panel__inner">
         <span class="site__name site__name--small u-margin-bottom">
